--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,7 +4,7 @@
 # https://doc.rust-lang.org/cargo/reference/resolver.html#feature-resolver-version-2
 resolver = "2"
 
-members = ["crates/*", "xtask"]
+members = ["crates/*", "examples/*", "xtask"]
 
 exclude = [
     "crates/model-checks",   # exclude model-checks parent directory
