Add std feature to burn-store dependencies
BurnpackStore::from_file requires the std feature. This was missing
from onnx-tests and all model-checks crates.

--- a/crates/model-checks/albert/Cargo.toml
+++ b/crates/model-checks/albert/Cargo.toml
@@ -20,7 +20,7 @@ burn = { workspace = true, features = [
     "wgpu",
     "metal",
 ] }
-burn-store = { workspace = true, features = ["burnpack", "pytorch"] }
+burn-store = { workspace = true, features = ["std", "burnpack", "pytorch"] }
 
 [build-dependencies]
 burn-onnx = { path = "../../burn-onnx" }
