--- a/crates/model-checks/silero-vad/Cargo.toml
+++ b/crates/model-checks/silero-vad/Cargo.toml
@@ -20,7 +20,7 @@ burn = { workspace = true, features = [
     "wgpu",
     "metal",
 ] }
-burn-store = { workspace = true, features = ["burnpack"] }
+burn-store = { workspace = true, features = ["std", "burnpack"] }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 
