Exclude ImageNet labels from typos check
The label.txt file contains scientific species names (mexicanus,
americanus) and historical terms (patten) that are flagged as typos.

--- a/_typos.toml
+++ b/_typos.toml
@@ -5,6 +5,8 @@ extend-ignore-identifiers-re = ["NdArray*", "ND"]
 extend-exclude = [
     "*.onnx",
     "*.proto",
+    # ImageNet labels contain scientific names that look like typos
+    "examples/image-classification-web/src/model/label.txt",
 ]
 
 [default.extend-words]
