--- a/crates/model-checks/clip-vit-b-32-vision/Cargo.toml
+++ b/crates/model-checks/clip-vit-b-32-vision/Cargo.toml
@@ -6,6 +6,10 @@ publish = false
 
 [workspace]
 
+[workspace.dependencies]
+burn = { git = "https://github.com/tracel-ai/burn", default-features = false, rev = "44bbbe8c2cf10784fe3275f9a9c9933732b600e4" }
+burn-store = { git = "https://github.com/tracel-ai/burn", default-features = false, rev = "44bbbe8c2cf10784fe3275f9a9c9933732b600e4" }
+
 [features]
 default = ["tch"]
 ndarray = []
