Add codegen snapshot tests for simplification comparison
Extend include_simplified_models! macro to expose source code as strings
via simplified_source/unsimplified_source modules. Add insta inline
snapshot tests that assert simplified and unsimplified codegen differ
and capture the expected simplified forward() output for regression
tracking.

Currently 4 models produce different codegen: gather_on_shape,
slice_on_shape, gather_shape_chain, permute_via_shape_gather.

--- a/crates/onnx-tests/Cargo.toml
+++ b/crates/onnx-tests/Cargo.toml
@@ -17,6 +17,7 @@ burn = { workspace = true }
 burn-store = { workspace = true, features = ["std", "burnpack"] }
 serde = { workspace = true }
 float-cmp = { workspace = true }
+insta = { workspace = true }
 
 [build-dependencies]
 burn-onnx = { path = "../burn-onnx" }
