--- a/Cargo.toml
+++ b/Cargo.toml
@@ -67,7 +67,7 @@ burn-tensor = { git = "https://github.com/tracel-ai/burn", default-features = fa
 # burn = { path = "../burn/crates/burn", default-features = false }
 # burn-ndarray = { path = "../burn/crates/burn-ndarray", default-features = false }
 # burn-store = { path = "../burn/crates/burn-store", default-features = false }
-# burn-tensor = { path = "../burn/burn-tensor", default-features = false }
+# burn-tensor = { path = "../burn/crates/burn-tensor", default-features = false }
 
 ### For the release. ###
 # burn = { version = "0.21.0", default-features = false }
