refactor: extract shared utilities from model-checks crates
All 8 model-check crates duplicated artifacts_dir() (Rust), backend
type aliases (Rust), get_artifacts_dir() (Python), and process_model()
(Python). Extract these into shared modules:

- common/src/lib.rs: artifacts_dir(), artifacts_dir_build(), backend_type!()
- common.py: get_artifacts_dir(), process_model()

This removes ~560 lines of duplicated code across 33 files.

--- a/crates/model-checks/albert/Cargo.toml
+++ b/crates/model-checks/albert/Cargo.toml
@@ -20,8 +20,8 @@ metal = ["burn/metal"]
 [dependencies]
 burn = { workspace = true }
 burn-store = { workspace = true, features = ["std", "burnpack", "pytorch"] }
-dirs = "6"
+model-checks-common = { path = "../common" }
 
 [build-dependencies]
 burn-onnx = { path = "../../burn-onnx" }
-dirs = "6"
+model-checks-common = { path = "../common" }
