--- a/crates/onnx-ir/Cargo.toml
+++ b/crates/onnx-ir/Cargo.toml
@@ -20,7 +20,7 @@ default = ["mmap"]
 mmap = ["memmap2"]
 
 [dependencies]
-onnx-ir-derive = { path = "../onnx-ir-derive", version = "=0.21.0" }
+onnx-ir-derive = { path = "../onnx-ir-derive", version = "=0.21.0-pre.1" }
 
 burn-tensor = { workspace = true }
 bytemuck = { workspace = true, features = ["extern_crate_alloc"] }
