Add reopened trigger to CI for bump-burn close/reopen workaround

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -15,7 +15,7 @@ on:
       - '!LICENSE-APACHE'
       - '!LICENSE-MIT'
   pull_request:
-    types: [opened, synchronize]
+    types: [opened, synchronize, reopened]
     paths:
       - 'Cargo.lock'
       - '**.rs'
