--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -15,7 +15,7 @@ on:
       - '!LICENSE-APACHE'
       - '!LICENSE-MIT'
   pull_request:
-    types: [opened, synchronize]
+    types: [opened, synchronize, reopened]
     paths:
       - 'Cargo.lock'
       - '**.rs'
@@ -31,8 +31,10 @@ env:
   RUST_PREVIOUS_VERSION: 1.92.0
   # Test in release mode (make it an empty string to test in debug mode)
   TEST_RELEASE_FLAG: "--release"
-  # Model-checks require externally downloaded ONNX files not available in CI
-  MODEL_CHECKS_EXCLUDE: "burn-onnx-model-checks-*,model-checks-common"
+  # Crates excluded from CI builds/tests:
+  # - model-checks: require externally downloaded ONNX files
+  # - raspberry-pi-pico: embedded no_std example, requires ARM target
+  CI_EXCLUDE: "burn-onnx-model-checks-*,model-checks-common,raspberry-pi-pico"
 
 concurrency:
   group: ${{ github.workflow }}-${{ github.ref }}
@@ -104,10 +106,10 @@ jobs:
           cache-key: ${{ matrix.rust }}-linux
       # --------------------------------------------------------------------------------
       - name: Documentation Build
-        run: cargo doc --workspace --no-deps --color=always --exclude 'burn-onnx-model-checks-*' --exclude model-checks-common
+        run: cargo doc --workspace --no-deps --color=always --exclude 'burn-onnx-model-checks-*' --exclude model-checks-common --exclude raspberry-pi-pico
       # --------------------------------------------------------------------------------
       - name: Documentation Tests
-        run: cargo test --workspace --doc --color always --exclude 'burn-onnx-model-checks-*' --exclude model-checks-common
+        run: cargo test --workspace --doc --color always --exclude 'burn-onnx-model-checks-*' --exclude model-checks-common --exclude raspberry-pi-pico
 
   linux-std-tests:
     runs-on: ubuntu-22.04
@@ -137,7 +139,7 @@ jobs:
           # Disable cache on linux-std (stable) runner which currently always runs out of disk space with tests + coverage
           enable-cache: ${{ matrix.rust != 'stable' }}
       - name: Tests
-        run: xtask test ${{ env.TEST_RELEASE_FLAG }} -x ${{ env.MODEL_CHECKS_EXCLUDE }}
+        run: xtask test ${{ env.TEST_RELEASE_FLAG }} -x ${{ env.CI_EXCLUDE }}
 
   linux-no-std-tests:
     runs-on: ubuntu-22.04
@@ -161,10 +163,10 @@ jobs:
           cache-key: ${{ matrix.rust }}-linux-no-std
       # --------------------------------------------------------------------------------
       - name: Crates Build
-        run: xtask --context no-std build -x ${{ env.MODEL_CHECKS_EXCLUDE }}
+        run: xtask --context no-std build -x ${{ env.CI_EXCLUDE }}
       # --------------------------------------------------------------------------------
       - name: Crates Tests
-        run: xtask --context no-std test ${{ env.TEST_RELEASE_FLAG }} -x ${{ env.MODEL_CHECKS_EXCLUDE }}
+        run: xtask --context no-std test ${{ env.TEST_RELEASE_FLAG }} -x ${{ env.CI_EXCLUDE }}
 
   windows-std-tests:
     runs-on: windows-2022
@@ -187,4 +189,4 @@ jobs:
           cache-key: ${{ matrix.rust }}-windows
       # --------------------------------------------------------------------------------
       - name: Tests
-        run: xtask test ${{ env.TEST_RELEASE_FLAG }} -x ${{ env.MODEL_CHECKS_EXCLUDE }}
+        run: xtask test ${{ env.TEST_RELEASE_FLAG }} -x ${{ env.CI_EXCLUDE }}
