Add fusion feature to all model checks
Enables burn's kernel fusion optimizer for GPU backends (Metal/Wgpu).
Usage: --features metal,fusion

--- a/crates/model-checks/albert/Cargo.toml
+++ b/crates/model-checks/albert/Cargo.toml
@@ -11,6 +11,7 @@ ndarray = ["burn/ndarray"]
 tch = ["burn/tch"]
 wgpu = ["burn/wgpu"]
 metal = ["burn/metal"]
+fusion = ["burn/fusion"]
 
 [dependencies]
 burn = { workspace = true }
